netfivesimple/charts/staging/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: netfivesample-svc
spec:
  selector:
    app: netfivesample-app
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
