netfivesimple/charts/staging/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netfivesample-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app2-dev.saxnio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netfivesample-svc
                port:
                  number: 80
